--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -20,50 +20,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-        <!-- Start Activity: Login or Create Account -->
+        
+        <!-- Notifications Activity -->
         <activity
-            android:name="org.cs.washington.cse477.StartActivity"
-            android:label="@string/app_name" >
+            android:name="org.cs.washington.cse477.NotificationActivity"
+            android:label="@string/title_activity_notification"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="org.cs.washington.cse477.NewAccountActivity"
-            android:label="@string/title_activity_new_account"
-            android:parentActivityName="org.cs.washington.cse477.StartActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.cs.washington.cse477.StartActivity" />
-        </activity>
-
-        <!-- Notifications Activity -->
-        <activity
-            android:name="org.cs.washington.cse477.NotificationActivity"
-            android:label="@string/title_activity_notification" 
-            android:parentActivityName="org.cs.washington.cse477.StartActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.cs.washington.cse477.StartActivity" />
-        </activity>
-                <activity
-            android:name="org.cs.washington.cse477.DeviceRegActivity"
-            android:label="@string/title_activity_device_reg" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.cs.washington.cse477.NotificationActivity" />
-        </activity>
-        <activity
             android:name="org.cs.washington.cse477.DeviceSetupActivity"
             android:label="@string/title_activity_device_setup" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.cs.washington.cse477.NotificationActivity" />
-        </activity>
-        <activity
-            android:name="org.cs.washington.cse477.DeviceStatusActivity"
-            android:label="@string/title_activity_device_status" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.NotificationActivity" />
@@ -82,6 +52,45 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.NotificationActivity" />
         </activity>
+        
+        
+        
+        <!-- Start Activity: Login or Create Account -->
+        <!-- 
+        <activity
+            android:name="org.cs.washington.cse477.StartActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+         -->
+        <!--
+        <activity
+            android:name="org.cs.washington.cse477.NewAccountActivity"
+            android:label="@string/title_activity_new_account"
+            android:parentActivityName="org.cs.washington.cse477.NotificationActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cs.washington.cse477.NotificationActivity" />
+        </activity> 
+        <activity
+            android:name="org.cs.washington.cse477.DeviceStatusActivity"
+            android:label="@string/title_activity_device_status" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cs.washington.cse477.NotificationActivity" />
+        </activity>
+        <activity
+            android:name="org.cs.washington.cse477.DeviceRegActivity"
+            android:label="@string/title_activity_device_reg" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cs.washington.cse477.NotificationActivity" />
+        </activity>
+         -->
+        
     </application>
 
 </manifest>
