--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:targetSdkVersion="19" />
 
     <application
+        android:name="ParseInit"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -90,7 +91,7 @@
                 android:value="org.cs.washington.cse477.NotificationActivity" />
         </activity>
          -->
-        
+   
     </application>
 
 </manifest>
