--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -3,7 +3,24 @@
     package="org.cs.washington.cse477"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
+    <!--  Parse push stuff -->
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<uses-permission android:name="android.permission.WAKE_LOCK" />
+<uses-permission android:name="android.permission.VIBRATE" />
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+ 
+<!--
+  IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
+  to match your app's package name + ".permission.C2D_MESSAGE".
+-->
+<permission android:protectionLevel="signature"
+    android:name="org.cs.washington.cse477.permission.C2D_MESSAGE" />
+<uses-permission android:name="org.cs.washington.cse477.permission.C2D_MESSAGE" />
+    
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE">
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE">
@@ -91,7 +108,26 @@
                 android:value="org.cs.washington.cse477.NotificationActivity" />
         </activity>
          -->
-   
+         <!--  PARSE PUSH NOTIFICATION STUFF -->
+        <service android:name="com.parse.PushService" />
+<receiver android:name="com.parse.ParseBroadcastReceiver">
+  <intent-filter>
+    <action android:name="android.intent.action.BOOT_COMPLETED" />
+    <action android:name="android.intent.action.USER_PRESENT" />
+  </intent-filter>
+</receiver>
+<receiver android:name="com.parse.GcmBroadcastReceiver"
+    android:permission="com.google.android.c2dm.permission.SEND">
+  <intent-filter>
+    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+    <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+ 
+    <!--
+      IMPORTANT: Change "com.parse.starter" to match your app's package name.
+    -->
+    <category android:name="org.cs.washington.cse477" />
+  </intent-filter>
+</receiver>
     </application>
 
 </manifest>
