taking a break for now...the components work its just not ideal

--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -111,7 +111,7 @@
         </activity>
          -->
          <!-- Push notification data payload getter stuff -->
-         <receiver android:name="org.cs.washington.cse477.NotificationActivity$PushDataReceiver" android:exported="false">
+         <receiver android:name="org.cs.washington.cse477.PushDataReceiver" android:exported="false">
   			<intent-filter>
   			  	<action android:name="org.cs.washington.cse477.SOUND_DATA_GETTER" />
   			</intent-filter>
