--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name="org.cs.washington.cse477.NotificationActivity"
             android:label="@string/title_activity_notification"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,20 +56,15 @@
         </activity>
         <activity
             android:name="org.cs.washington.cse477.DeviceSetupActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_device_setup" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.NotificationActivity" />
         </activity>
         <activity
-            android:name="org.cs.washington.cse477.AudioUploadActivity"
-            android:label="@string/title_activity_audio_upload" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.cs.washington.cse477.NotificationActivity" />
-        </activity>
-        <activity
             android:name="org.cs.washington.cse477.SettingsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_settings" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
