--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -57,8 +57,7 @@
         <activity
             android:name="org.cs.washington.cse477.NotificationActivity"
             android:label="@string/title_activity_notification"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop" >
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.SettingsActivity" />
@@ -66,8 +65,8 @@
         <activity
             android:name="org.cs.washington.cse477.DeviceSetupActivity"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_device_setup"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_device_setup" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.SettingsActivity" />
@@ -75,8 +74,7 @@
         <activity
             android:name="org.cs.washington.cse477.DeviceSetupProgressActivity"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_device_setup_progress"
-            android:launchMode="singleTop" >
+            android:label="@string/title_activity_device_setup_progress" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.cs.washington.cse477.DeviceSetupActivity" />
