--- a/Echo/AndroidManifest.xml
+++ b/Echo/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
     <!-- APPLICATION -->
     <application
-        android:name="ParseInit"
+        android:name="AppInit"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
